--- a/src/index.html
+++ b/src/index.html
@@ -10,7 +10,7 @@
     <script>
       function getData() {
         var xhr = new XMLHttpRequest();
-        xhr.open("GET", "http://localhost/data", true);
+        xhr.open("GET", "http://192.168.8.135:8000/data", true);
         xhr.onreadystatechange = function () {
           if (xhr.readyState == 4) {
             var data = JSON.parse(xhr.responseText);
@@ -21,7 +21,7 @@
         xhr.send();
       }
 
-      setInterval(getData, 1000);
+      setInterval(getData, 2000);
     </script>
   </body>
 </html>
